# Projeto_2_FastAPI

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: main.py
app/db/: base.py  connection.py  models.py
migrations/: env.py
migrations/versions/: 49b455ffffd5_criando_tabela_categorias.py
